--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.10",
+    "cross-fetch": "^3.1.5",
     "gatsby": "^4.9.3",
+    "netlify-cli": "^9.13.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
